@@ -11,7 +11,7 @@ APIKEY = "ABQIAAAA06IJoYHDPFMx4u3hTtaghxSXii2MTQlH08211N69IoqDn0RDwxSg93HhPES135
 APIKEY = "ABQIAAAA06IJoYHDPFMx4u3hTtaghxTU2QkCNWGFpwxhhQnHf-7Pc6f1lBTQWFSuWvEBhZGiAbR5wPO0DLqoOw"
 
 # Haddock
-APIKEY="ABQIAAAA06IJoYHDPFMx4u3hTtaghxS1mGAeXhF8eEwoOC3WUqD9xSVHbhT_wvgbriWemZzoPwFT5-HqnLJ9-A"
+#APIKEY="ABQIAAAA06IJoYHDPFMx4u3hTtaghxS1mGAeXhF8eEwoOC3WUqD9xSVHbhT_wvgbriWemZzoPwFT5-HqnLJ9-A"
 
 ADMINS = (
     # ('Your Name', 'your_email@domain.com'),
